@@ -17,7 +17,7 @@ __email__ = "brett@python.org"
 # Exports only things specified by thread documentation
 # (skipping obsolete synonyms allocate(), start_new(), exit_thread())
 __all__ = ['error', 'start_new_thread', 'exit', 'get_ident', 'allocate_lock',
-           'LockType']
+           'interrupt_main', 'LockType']
 
 import traceback as _traceback
 
@@ -36,6 +36,9 @@ def start_new_thread(function, args, kwargs={}):
     caught and nothing is done; all other exceptions are printed out
     by using traceback.print_exc().
 
+    If the executed function calls interrupt_main the KeyboardInterrupt will be
+    raised when the function returns.
+
     """
     if type(args) != type(tuple()):
         raise TypeError("2nd arg must be a tuple")
@@ -47,6 +50,10 @@ def start_new_thread(function, args, kwargs={}):
         pass
     except:
         _traceback.print_exc()
+    if _interrupt:
+        global _interrupt
+        _interrupt = False
+        raise KeyboardInterrupt
 
 def exit():
     """Dummy implementation of thread.exit()."""
@@ -114,3 +121,12 @@ class LockType(object):
 
     def locked(self):
         return self.locked_status
+
+
+_interrupt = False
+
+def interrupt_main():
+    """Set _interrupt flag to True to have start_new_thread raise
+    KeyboardInterrupt upon exiting."""
+    global _interrupt
+    _interrupt = True
